# stock-analysis-agent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __main__.py  index.html  package.json  pyproject.toml  run.py
.claude/: settings.json
.github/workflows/: ci.yml
.omc/: prd.json  project-memory.json
.omc/innovation/: ideas.md
.omc/sessions/: 2e9f77cc-3026-4a4f-81ec-107a043d9645.json
.omc/state/: agent-replay-2ecdedca-4a77-4b18-a6fd-f4e98a6fa80b.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-03-31T08-15-31-299Z.json  checkpoint-2026-03-31T08-43-42-487Z.json  checkpoint-2026-04-04T18-18-11-510Z.json  checkpoint-2026-04-05T02-22-03-894Z.json
docs/: api-pricing.md
src/: __init__.py  __main__.py  agent.py  agent_tools.py  api.py  cli.py  debate.py  export_pdf.py  llm.py  llm_router.py  macd_events.py  persistence.py  portfolio.py  report.py  scheduler.py  server.py  tools.py  tts.py  watchlist.py
tests/: conftest.py  test_agent.py  test_agent_tools.py  test_api.py  test_debate.py  test_llm.py  test_report.py  test_tools.py
